<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.shoes.ShoeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/name_item_text"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_name_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <TextView
            android:id="@+id/size_item_text"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_size_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10" />

        <TextView
            android:id="@+id/description_item_text"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11" />

        <TextView
            android:id="@+id/company_item_text"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/company_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView8"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/shoe_name_text"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/company_text"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView10"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/shoe_size_text"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/description_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>